# finance-match

./: .pre-commit-config.yaml  Diagram-Finance-Match.drawio  pyproject.toml  requirements.txt  run.py
src/: data_controller.py  expense.py  intro_view.py  main.py  match_controller.py  text_compare.py
tests/: intro_view_test.py  main_test.py  match_controller_test.py  mock_expenses.py
