[project]
name = "finance-match"
version = "0.1.0"
description = ""
authors = [
    {name = "Murilo Seidenstucker",email = "murilocampos.004@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "pandas[excel] (>=2.3.3,<3.0.0)",
]

[project.scripts]
match = "run:app"

[tool.poetry]
packages = [{include = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
isort = "^5.13.2"
taskipy = "^1.14.1"
black = "^24.10.0"
pylint = "^3.3.3"
pre-commit = "^4.1.0"
pytest-mock = "^3.14.1"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
lint = "black --check --diff . && isort --check --diff ."
pre_test = "task lint"
test = "pytest -s -x --cov=src -vv"
post_test = "coverage html"
